project(odbcslap CXX)

# CMake useful variables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

# Set the version number of your project here (format is MAJOR.MINOR.PATCHLEVEL - e.g. 1.0.0)
set(VERSION_MAJOR "0")
set(VERSION_MINOR "9")
set(VERSION_PATCH "1")
set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})

SET(${PROJECT_NAME}_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" "${NANODBC_INCLUDE_DIR}" CACHE STRING "${PROJECT_NAME} include directory")

SET(CURSES_NEED_NCURSES TRUE)
find_package(Curses REQUIRED)

include_directories("${${PROJECT_NAME}_INCLUDE_DIR}" ${CURSES_INCLUDE_DIR})

add_subdirectory(src)
